# jotty

./: .bandit.yaml  .env.anthropic  .env.example  .flake8  .gitignore  .importlinter  .pre-commit-config.yaml  A_TEAM_REAL_LEARNING_OUTPUT.md  BRAIN_VS_MEMORY_ANALYSIS.md  CLAUDE.md  COLLABORATION_INFRASTRUCTURE_SUMMARY.md  COLLABORATIVE_SECURITY_REVIEW.md  COMPLETE_REFACTOR_SUMMARY.md  COMPLEX_PAYMENT_ECOSYSTEM.md  COMPREHENSIVE_TEST_SUMMARY.md  CONTENT_TOOLS_COMPLETE.md  CONTRIBUTING.md  CURRENT_DRY_STATUS.md  DEPLOYMENT.md  DYNAMIC_SPAWNING_COMPLETE.md  ERROR_IMPROVEMENTS_SUMMARY.md  FIXES_SUMMARY.md  FUNCTIONAL_TEST_RESULTS.md  GAIA_IMPLEMENTATION_STATUS.md  GENERATED_API_SPEC.md  HEALTH_CHECK_REPORT.md  HOW_LEARNING_PERSISTS_ACROSS_RUNS.md  HOW_TO_USE_REAL_LLM.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  JOTTY_VS_MEGAAGENT.md  KGAB_SPV_Fund_Admin_Oversight_Checklist.docx_20260130_144526.docx  KGAB_SPV_Fund_Admin_Oversight_Checklist.md_20260130_152240.docx  LOGGING_AND_PROFILING.md  MANIFEST.in  MODULE_BASED_CONFIG_COMPLETE.md  NEXT_STEPS_PLAN.md  PACKAGE_SETUP_GUIDE.md  PAPER2SLIDES_INTEGRATION.md  PARALLEL_EXECUTION_RESULTS.md  (+104 more)
apps/: __init__.py
apps/web/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
apps/web/src-tauri/src/: main.rs
benchmarks/: Dockerfile.swebench  __init__.py  benchmark_test.py  code_judge.py  quick_bench.py  swe_bench.py
cli/: __init__.py  __main__.py  app.py
configs/: README.md
core/: __init__.py  capabilities.py  jotty.py  py.typed  validation.py
docs/: A2UI_DRY_VERIFICATION.md  A2UI_WIDGETS.md  ACHIEVEMENT_REPORT.md  ACHIEVEMENT_REPORT_CORE_EVOLUTION.md  ALL_FIXES_COMPLETE.md  ALL_IMPROVEMENTS_COMPLETED.md  ALL_IMPROVEMENTS_SUMMARY.md  ALL_ISSUES_FIXED.md  ANTHROPIC_BEST_PRACTICES_QUICK_REFERENCE.md  ANTHROPIC_BEST_PRACTICES_SUMMARY.md  ANTHROPIC_BEST_PRACTICES_VERIFICATION.md  API_REFERENCE.md  API_VS_CLI_COMPARISON.md  ARCHITECTURAL_DECISION_CHAINOFTHOUGHT.md  ARCHITECTURE.md  ARCHITECTURE_CLARIFICATION.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_ENFORCEMENT_COMPLETE.md  ARCHITECTURE_INTERLINKED.md  ARCHITECTURE_LLM_WIDGET_ROUTING.md  ARCHITECTURE_PROPOSAL.md  ARCHITECTURE_RECOMMENDATION.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHITECTURE_REFACTORING_UPDATE.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_WORLD_CLASS_EXAMPLES.md  ARCHITECT_PROCEED_EXPLANATION.md  ASYNC_CONTEXT_FIX.md  ASYNC_DSPY_FIX.md  AUDITOR_LOGGING_ENHANCEMENT.md  AUDITOR_SELECTION_GUIDE.md  AUDITOR_TASK_SUCCESS_FIX.md  AUDITOR_TYPES_COMPLETE.md  AUDITOR_TYPES_IMPLEMENTATION.md  AUTOAGENT_IN_UNIFIED_ARCHITECTURE.md  AUTOAGENT_PLACEMENT_CLARIFIED.md  AUTONOMOUS_AGENT_DRY_ARCHITECTURE.md  AUTONOMOUS_AGENT_IMPLEMENTATION_PLAN.md  AUTONOMOUS_AGENT_PRODUCT_VISION.md  AUTONOMOUS_AGENT_STITCHING_SUMMARY.md  (+231 more)
examples/: README.md  __init__.py  a2ui_agent_example.py  auditor_selector_example.py  auditor_types_example.py  chain_of_thought_with_schema.py  claude_cli_wrapper.py  claude_cli_wrapper_enhanced.py  cost_tracking_example.py  cross_run_learning_example.py  demo_dag_agents.py  demo_universal_workflow.py  demo_world_class_swarm.py  direct_claude_cli.py  evaluation_example.py  execution_modes_examples.py  expert_agents_demo.py  langgraph_usage_examples.py  mermaid_learning_demo.py  optimization_pipeline_example.py  optimization_pipeline_generic_examples.py  quick_benchmark_test.py  real_mas_research_assistant.py  section_widgets_demo.py  show_improvements_storage.py  simple_mas_test.py  task_assistant_agent.py  test_components_standalone.py  test_json_output.py  test_refactored_jotty.py  test_refactored_with_cli.py  test_signature_extraction.py  test_simple_mas.py  test_with_claude_api.py  test_with_logging.py  tool_collection_example.py  typescript_dspy_usage.tsx  v3_quickstart.py  v3_vs_v2.py  working_code_analyzer.py  (+1 more)
kaggle_demo/: demo_all_usecases.py  demo_autodiscover_features.py  demo_evolutionary_ml.py  demo_evolutionary_v2.py  demo_jotty_autonomous.py  demo_jotty_autonomous_ml.py  demo_jotty_kaggle_full.py  demo_kaggle_champion.py  demo_skill_orchestrator.py  jotty_v2_autonomous_kaggle.py
layers/: __init__.py
mcp/: Dockerfile  __init__.py  run-mcp-docker.sh  server.py  test_http_client.py  test_mcp_call.sh  test_mcp_remote.sh
mcp_server/: memory_server.py
paytm-phonepe-razorpay-comparison/: README.md  index.html  package.json
scripts/: add_status_to_skills.py  add_type_hints.py  add_type_hints_advanced.py  add_type_hints_bulk.py  add_type_hints_to_100.py  add_workflow_sections.py  analyze_jotty_runtime.py  analyze_missing_hints.py  auth_notebooklm.py  autofix_imports.py  autofix_mypy.py  autofix_mypy_errors.py  benchmark.py  check_import_boundaries.py  convert_skill_names_to_gerund.py  create_skill_references.py  create_swarm.py  diagnose_mypy_errors.py  download_gaia.py  extract_browser_session.py  extract_mixin_attributes.py  extract_notebooklm_cookies.py  fix_broken_imports.py  fix_exception_handling.py  fix_mixins.py  fix_mixins_comprehensive.py  gen_batch1.py  gen_batch2.py  gen_batch3.py  gen_batch4a.py  gen_batch4b.py  gen_batch5a.py  gen_batch5b.py  gen_batch6a.py  generate_5th_grade_economics.py  generate_5th_grade_fractions.py  generate_skills.py  generate_transformer_slides.py  jotty_discover.py  jotty_doctor.py  (+15 more)
sdk/: .gitignore  MULTI_LANGUAGE_SDK_GUIDE.md  README.md  SDK_SOLUTION_SUMMARY.md  TEST_RESULTS.md  __init__.py  client.py  generate_sdks.py  openapi_generator.py  quick_start.sh  test_generated_python_sdk.py  test_real_use_case.py  test_sdk_generation.py
skills/: README.md  skills_manifest.yaml
tasks/: TASK-STOCK-SCREENER.md
telegram_bot/: __init__.py  __main__.py  bot.py  renderer.py
templates/: collaborative_team_template.py  hybrid_team_template.py  sequential_team_template.py
test_collection/: collection.json
test_outputs/: math_latex_expert_results.json  plantuml_5_cases_results.json
tests/: COMPLETE_TEST_SUMMARY.md  README.md  RL_ACTUAL_RESULTS_HONEST_ANALYSIS.md  RL_FIX_COMPLETE.md  RL_NATURAL_DEPS_DEBUG_FINDINGS.md  conftest.py  inspect_expert_memory.py  inspect_expert_memory_detailed.py  test_agent_base.py  (+183 more)
(+2896 files in other folders)
